# finstream-event-driven-platform

./: .env.example  Makefile  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
dashboard/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: Layout.tsx
dashboard/src/pages/: Alerts.tsx  Dashboard.tsx  Leaderboard.tsx  Login.tsx  Portfolio.tsx  SymbolDetail.tsx
dashboard/src/store/: authStore.ts
docs/: API_DOCUMENTATION.md  TROUBLESHOOTING.md  USER_GUIDE.md
infrastructure/db/: init.sql
infrastructure/terraform/: main.tf
observability/grafana/dashboards/: finstream-overview.json
observability/loki/: loki-config.yml
observability/prometheus/: prometheus.yml
observability/prometheus/rules/: alerts.yml
observability/promtail/: promtail-config.yml
services/alert-service/: Dockerfile  requirements.txt
services/alert-service/app/: __init__.py  detector.py  main.py
services/api-gateway/: Dockerfile  requirements.txt
services/api-gateway/app/: __init__.py  main.py
services/market-data-service/: Dockerfile  requirements.txt
services/market-data-service/app/: __init__.py  main.py
services/market-simulator/: Dockerfile  requirements.txt
services/market-simulator/app/: __init__.py  main.py
services/portfolio-service/: Dockerfile  requirements.txt
services/portfolio-service/app/: __init__.py  main.py
services/stream-processor/: Dockerfile  requirements.txt
services/stream-processor/app/: __init__.py  aggregator.py  main.py  repository.py
shared/python-lib/: pyproject.toml
shared/python-lib/finstream_common/: __init__.py  config.py  kafka.py  logging.py  metrics.py  models.py  tracing.py
(+5 files in other folders)
